<resources>
    <string name="app_name">Momenty</string>

    <!-- 사용자 & 반려동물 프로필 설정 -->
    <string name="profile_title">기본 정보</string>
    <string name="name_field">이름 (필수)</string>
    <string name="name_hint">placeholder</string>
    <string name="gender_field">성별</string>
    <string name="gender_male">남</string>
    <string name="gender_female">여</string>
    <string name="birth_hint">생년월일</string>
    <string name="question_time_field">오늘의 질문 알림 시간을 선택해 주세요.</string>
    <string name="question_time_unchosen">알림 시간을 설정하지 않겠습니다.</string>
    <string name="save">저장하기</string>
    <string name="pet_type">종 (필수) / 품종 (선택)</string>
    <string name="type_hint">강아지 / 고양이</string>
    <string name="pet_intro">반려동물 소개 (선택)</string>
    <string name="name_error_message">2-10자 이내로 입력해 주세요.</string>

    <!-- 알림 시간 -->
    <string-array name="alarm_time_options">
        <item>option</item>
        <item>AM 09:00</item>
        <item>AM 10:00</item>
        <item>AM 11:00</item>
        <item>PM 12:00</item>
        <item>PM 01:00</item>
        <item>PM 02:00</item>
        <item>PM 03:00</item>
        <item>PM 04:00</item>
        <item>PM 05:00</item>
        <item>PM 06:00</item>
        <item>PM 07:00</item>
        <item>PM 08:00</item>
        <item>PM 09:00</item>
    </string-array>

    <!-- 고양이 종 -->
    <string-array name="cat_type_options">
        <item>코리안 숏헤어(믹스)</item>
        <item>아메리칸 숏헤어</item>
        <item>브리티시 숏헤어</item>
        <item>러시안 블루</item>
        <item>스코티시 폴드</item>
        <item>샴</item>
        <item>터키시 앙고라</item>
        <item>페르시안</item>
        <item>렉돌</item>
        <item>메인쿤</item>
        <item>노르웨이 숲</item>
        <item>히말라얀</item>
        <item>터키시 반</item>
        <item>뱅갈</item>
        <item>아비시니안</item>
        <item>오리엔탈 숏헤어</item>
        <item>데본 렉스</item>
        <item>코니시 렉스</item>
        <item>싱카푸라</item>
        <item>소말리</item>
        <item>맨치킨</item>
        <item>스핑크스</item>
        <item>버만</item>
        <item>샤르트뢰</item>
        <item>아메리칸 컬</item>
        <item>라팜</item>
        <item>셀커크 렉스</item>
        <item>피터볼드</item>
        <item>사바나 캣</item>
        <item>기타:</item>
    </string-array>

    <!-- 강아지 종 -->
    <string-array name="dog_type_options">
        <item>-----소형-----</item>
        <item>말티즈</item>
        <item>포메라니안</item>
        <item>치와와</item>
        <item>요크셔테리어</item>
        <item>토이 푸들</item>
        <item>시츄</item>
        <item>비숑 프리제</item>
        <item>파피용</item>
        <item>닥스훈트</item>
        <item>페키니즈</item>
        <item>미니어처 핀셔</item>
        <item>볼로네즈</item>
        <item>-----중형-----</item>
        <item>푸들</item>
        <item>코커 스패니얼</item>
        <item>보더 콜리</item>
        <item>시바견</item>
        <item>웰시 코기</item>
        <item>비글</item>
        <item>불독</item>
        <item>바셋 하운드</item>
        <item>샤페이</item>
        <item>불테리어</item>
        <item>진돗개</item>
        <item>아메리칸 코카 스패니얼</item>
        <item>스피츠</item>
        <item>-----대형-----</item>
        <item>골든 리트리버</item>
        <item>래브라도 리트리버</item>
        <item>저먼 셰퍼드</item>
        <item>시베리안 허스키</item>
        <item>알래스칸 말라뮤트</item>
        <item>로트와일러</item>
        <item>도베르만</item>
        <item>사모예드</item>
        <item>그레이트 피레니즈</item>
        <item>세인트 버나드</item>
        <item>그레이트 데인</item>
        <item>아키타</item>
        <item>보르조이</item>
        <item>차우차우</item>
        <item>기타:</item>
    </string-array>

    <!-- 문의 유형 -->
    <string-array name="inquiry_type">
        <item>계정</item>
        <item>서비스</item>
    </string-array>

    <!-- 일정 관리 -->
    <string name="calendar_title">일정 관리</string>
    <string name="alarm_title">알림 관리</string>
    <string name="alarm_pet_filter">반려동물 선택</string>
    <string name="calendar_year">년</string>
    <string name="calendar_month">월</string>
    <string-array name="calendar_date">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>
    <string-array name="schedule_type">
        <item>산책</item>
        <item>미용</item>
        <item>투약</item>
        <item>간식</item>
        <item>밥</item>
        <item>건강</item>
        <item>식사</item>
        <item>기타</item>
    </string-array>

    <!-- 알림 관리 -->
    <string name="alarm_continue">지속 시간</string>
    <string name="alarm_date">알림 요일</string>
    <string name="alarm_time">알림 시간</string>
    <string name="alarm_name">일정 이름</string>
    <string name="alarm_term">주기</string>
    <string name="alarm_note">메모</string>
    <string name="alarm_once">일회성</string>
    <string name="alarm_repeat">반복성</string>
    <string name="alarm_add">알림 추가</string>
    <string name="alarm_action_type">유형</string>
    <string name="alarm_action_type_dialog">활동 유형 선택</string>
    <string name="schedule_none">일정이 없습니다.</string>

    <string name="type_walk">산책</string>
    <string name="type_eat">식사</string>
    <string name="type_beauty">미용</string>
    <string name="type_health">건강</string>
    <string name="type_medician">투약</string>
    <string name="type_treat">간식</string>
    <string name="type_etc">기타</string>

    <string name="day_mon">월</string>
    <string name="day_tue">화</string>
    <string name="day_wed">수</string>
    <string name="day_thr">목</string>
    <string name="day_fri">금</string>
    <string name="day_sat">토</string>
    <string name="day_sun">일</string>

    <!-- 알림 추가 시간 선택 다이얼로그 -->
    <string name="time_picker_title">시간</string>
    <string name="time_picker_day">오전</string>
    <string name="time_picker_night">오후</string>
    <string name="time_picker_hour">시</string>
    <string name="time_picker_min">분</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_enter">확인</string>

    <!-- 반복 시간 다이얼로그 -->
    <string name="repeat_time_title">반복 시간</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Community -->
    <string name="community_comment_mute_reply">대댓글 알림 끄기</string>
    <string name="community_comment_delete">삭제</string>

    <string name="community_title">커뮤니티</string>

    <string name="back">back</string>
    <string name="more">더보기</string>

    <string name="post_category_question">질문</string>
    <string name="post_author_anonymous">익명</string>

    <string name="comment_label">댓글</string>
    <string name="comment_hint">댓글을 입력해 주세요</string>
    <string name="comment_submit">등록</string>


    <!-- 모먼트 기록 -->
    <string name="moment_record">모먼트 기록</string>
    <string name="add_photo">사진 추가</string>
    <string name="mood_question">00와 함께한 오늘의 감정은 어땠나요?</string>
    <string name="mood_good">좋아요!</string>
    <string name="mood_soso">보통이에요</string>
    <string name="mood_bad">별로예요</string>
    <string name="moment_content_label">모먼트 내용 작성</string>
    <string name="moment_content_hint">간단한 내용을 적어주세요</string>
    <string name="cancel">취소</string>

    <string name="record_title_placeholder">OO의 모먼트</string>
    <string name="go_community">커뮤니티로 이동</string>
    <string name="month">월별</string>
    <string name="write">작성하기</string>
    <string name="stats">통계</string>

    <string name="album_count_format">%1$d개의 항목</string>


</resources>